chore: added admins endpoints
